# harmonia

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  harmonia.service  pyproject.toml  pyrightconfig.json
config/caddy/: Caddyfile
config/cloudflared/: config.yml
config/liquidsoap/: Dockerfile  radio.liq
docs/: v2-roadmap.md
src/harmonia_scheduler/: __init__.py  cli.py  library_events.py  scheduler.py  stats.py
tests/: test_scheduler.py
web/: app.js  image-manifest.json  index.html  styles.css
