[project]
name = "harmonia-scheduler"
version = "0.1.0"
description = "Read-only scheduler spike for Harmonia radio playback."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
harmonia-scheduler = "harmonia_scheduler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
